[package]
name = "control-net-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diffusers = { version = "0.3.1", features = ["clap", "image", "imageproc"] }
tch = "0.13"
torch-sys = { version = "0.13", features = ["download-libtorch"] }


image = "0.24.6"
imageproc = "0.23.0"
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive"] }
